Add compiler switch to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,5 @@ install:
     - chmod +x doveralls
   
 script:
-    - dub test -b unittest-cov
+    - dub test -b unittest-cov --compiler=${DC}
     - ./doveralls
