--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,20 @@
 language: d
-
 matrix:
     allow_failures:
         - d: gdc-4.8.2
         - d: ldc-0.14.0
-        - d: dmd-2.065.0
     include:
         - d: dmd-2.067.1
         - d: gdc-4.9.2
         - d: ldc-0.15.1
-        - d: dmd-2.065.0
         - d: gdc-4.8.2
         - d: ldc-0.14.0
 
 install:
-    - wget -O doveralls "https://github.com/ColdenCullen/doveralls/releases/download/v1.1.6/doveralls_linux_travis"
-    - chmod +x doveralls
+    - chmod +x download_doveralls.sh
+    - ./download_doveralls.sh
   
 script:
     - dub test -b unittest-cov --compiler=${DC}
-    - ./doveralls
+    - chmod +x start_doveralls.sh
+    - ./start_doveralls.sh
