--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ matrix:
         - d: gdc-4.8.2
         - d: ldc-0.14.0
     include:
+        - d: dmd-2.069.2
+            env: USE_DOVERALLS=true
         - d: dmd-2.067.1
         - d: gdc-4.9.2
         - d: ldc-0.15.1
