--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,7 @@ matrix:
         - d: ldc-0.15.1
         - d: gdc-4.8.2
         - d: ldc-0.14.0
-
-install:
-    - chmod +x download_doveralls.sh
-    - ./download_doveralls.sh
   
 script:
-    - dub test -b unittest-cov --compiler=${DC}
-    - chmod +x start_doveralls.sh
-    - ./start_doveralls.sh
+    - chmod +x travis-script.sh
+    - ./travis-script.sh
